#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([footpath], [1.0], [liangpan180@163.com])
#AC_CONFIG_SRCDIR([footpath.cc])
#AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([footpath], [1.0])

# Checks for programs.
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([Makefile
		src/Makefile
		utils/Makefile
		])
